--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -38,13 +38,13 @@
                      AbsoluteLayout.LayoutBounds="0.96, 0.02, 40, 45" 
                      BackgroundColor="#CCFFFFFF" WidthRequest="45" x:Name="LocateMeButton"/>
         
-        <!-- CHWILOWE -->
-        <ImageButton Source="flag.png" Clicked="ScanForNearbyPoints"
+        <!-- Sprawdzenie pobliskich punktów -->
+        <ImageButton Source="radar.png" Clicked="ScanForNearbyPoints"
              AbsoluteLayout.LayoutFlags="PositionProportional"
-             AbsoluteLayout.LayoutBounds="0.66, 0.52, 40, 45" 
-             BackgroundColor="#CCFFFFFF" WidthRequest="45"/>
+             AbsoluteLayout.LayoutBounds="0.96, 0.09, 40, 45" 
+             BackgroundColor="#CCFFFFFF" WidthRequest="45" x:Name="CheckNearbyPointsButton"/>
 
-        <!-- Przycisk anulowania trasy offline -->
+        <!-- Przycisk Anulowania trasy offline -->
         <ImageButton Source="cancel.png" Clicked="CancelNavigationButton" IsVisible="False"
              AbsoluteLayout.LayoutFlags="PositionProportional"
              AbsoluteLayout.LayoutBounds="0.01, 0.84, 70, 45" 
@@ -134,8 +134,8 @@
             </ScrollView>
         </StackLayout>
         <!-- Ekran informacji ile jeszcze zostało -->
-        <StackLayout WidthRequest="360" HeightRequest="50" BackgroundColor="White" IsVisible="False" x:Name="NavigationOnlineTest">
-            <Grid RowDefinitions=".06*" ColumnDefinitions=".40*,.40*,.20*">
+        <StackLayout WidthRequest="360" HeightRequest="80" BackgroundColor="White" IsVisible="False" x:Name="NavigationOnlineTest">
+            <Grid RowDefinitions=".06*" ColumnDefinitions=".40*,.40*,.20*" VerticalOptions="CenterAndExpand">
                 <Label Grid.Column="0" Text="" FontSize="26" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" x:Name="DistanceOnlineLabel"/>
                 <Label Grid.Column="1" Text="" FontSize="26" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" x:Name="TimeOnlineLabel"/>
                 <ImageButton Grid.Column="2" Source="cancel.png" HorizontalOptions="Center" VerticalOptions="Center" Clicked="CancelNavigationButton" WidthRequest="52"/>
