--- a/Pages/UserManager.xaml
+++ b/Pages/UserManager.xaml
@@ -40,10 +40,12 @@
         </StackLayout>
         <!-- Zalogowany użytkownik -->
         <StackLayout IsVisible="False" x:Name="LoggedUser">
-            <Grid RowDefinitions="*,*,*" ColumnDefinitions=".100*" Padding="15">
+            <Grid RowDefinitions="*,*,*,*" ColumnDefinitions=".100*" Padding="15">
                 <Label Grid.Row="0" Grid.Column="0" Text="" FontSize="24" FontAttributes="Bold" x:Name="LoggedLabel" HorizontalOptions="CenterAndExpand"/>
                 <Label Grid.Row="1" Grid.Column="0" FontSize="22" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" x:Name="ScoreUser"/>
-                <Button Grid.Row="2" Grid.Column="0" Text="Wyloguj" CornerRadius="20" WidthRequest="250" Clicked="LogoutButton"
+                <Button Grid.Row="2" Grid.Column="0" Text="Tabela wyników" CornerRadius="20" WidthRequest="250" Clicked="LeaderboardButton"
+                        Margin="0,10,0,0" FontSize="16" FontAttributes="Bold" x:Name="Leaderboard"/>
+                <Button Grid.Row="3" Grid.Column="0" Text="Wyloguj" CornerRadius="20" WidthRequest="250" Clicked="LogoutButton"
                         Margin="0,10,0,0" FontSize="16" FontAttributes="Bold"/>
             </Grid>
         </StackLayout>
