--- a/Pages/ManageApp/AddNewPoint.xaml
+++ b/Pages/ManageApp/AddNewPoint.xaml
@@ -2,11 +2,24 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GpsApplication.Pages.ManageApp.AddNewPoint"
-             Title="AddNewPoint">
+             Title="Dodaj nowy punkt">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <Grid RowDefinitions="*,*,*,*,*" ColumnDefinitions=".100*" Padding="10">
+            <!-- Label nazwy punktu -->
+            <Label Grid.Row="0" Text="Podaj nazwę punktu" Margin="10,0,0,0" FontSize="18" FontAttributes="Bold"/>
+            <!-- Entry nazwy punktu -->
+            <Frame Grid.Row="1" Padding="10">
+                <Entry Grid.Row="1" Placeholder="Nazwa nowego punktu" TextChanged="EntryAddPointChanged" x:Name="NewPointName"/>
+            </Frame>
+            <!-- Label współrzędnych -->
+            <Label Grid.Row="2" Text="Podaj współrzędne punktu" Margin="10,10,0,0" FontSize="18" FontAttributes="Bold"/>
+            <!-- Entry współrzędnych -->
+            <Frame Grid.Row="3" Padding="10">
+                <Entry Grid.Row="3" Placeholder="Szerokość, długość" TextChanged="EntryAddPointChanged" x:Name="NewPointLatLong"/>
+            </Frame>
+            <!-- Przycisk dodaj -->
+            <Button Grid.Row="4" Text="Dodaj punkt" FontAttributes="Bold" FontSize="18" Margin="0,10,0,0" x:Name="AddPointButton"
+                    HorizontalOptions="FillAndExpand" WidthRequest="250" CornerRadius="20" Clicked="AddNewPointButton" IsEnabled="False"/>
+        </Grid>
     </VerticalStackLayout>
 </ContentPage>
