--- a/Pages/UserManager.xaml
+++ b/Pages/UserManager.xaml
@@ -55,7 +55,7 @@
                 <Label Grid.Row="0" Grid.Column="0" Text="" FontSize="28" FontAttributes="Bold" x:Name="LoggedLabelAdmin" HorizontalOptions="CenterAndExpand"/>
                 <!-- Dodawanie ważnego punktu -->
                 <Button Grid.Row="1" Grid.Column="0" Text="Dodaj ważny punkt" CornerRadius="20" MinimumWidthRequest="250"
-                        FontAttributes="Bold" WidthRequest="250" FontSize="16" Margin="0,10,0,0"/>
+                        FontAttributes="Bold" WidthRequest="250" FontSize="16" Margin="0,10,0,0" Clicked="OpenAddNewPointPage"/>
                 <!-- Dodawanie pytań do quizów -->
                 <Button Grid.Row="2" Grid.Column="0" Text="Dodaj pytanie do quizu" MinimumWidthRequest="250"
                         CornerRadius="20" WidthRequest="250" FontSize="16" FontAttributes="Bold" Margin="0,10,0,0"/>
