--- a/Pages/UserManager.xaml
+++ b/Pages/UserManager.xaml
@@ -58,7 +58,7 @@
                         FontAttributes="Bold" WidthRequest="250" FontSize="16" Margin="0,10,0,0" Clicked="OpenAddNewPointPage"/>
                 <!-- Dodawanie pytań do quizów -->
                 <Button Grid.Row="2" Grid.Column="0" Text="Dodaj pytanie do quizu" MinimumWidthRequest="250"
-                        CornerRadius="20" WidthRequest="250" FontSize="16" FontAttributes="Bold" Margin="0,10,0,0"/>
+                        CornerRadius="20" WidthRequest="250" FontSize="16" FontAttributes="Bold" Margin="0,10,0,0" Clicked="OpenAddQuestionPage"/>
                 <!-- Tablica wyników -->
                 <Button Grid.Row="3" Grid.Column="0" Text="Tabela wyników" CornerRadius="20" MinimumWidthRequest="250" WidthRequest="250" Clicked="LeaderboardButton"
                 Margin="0,10,0,0" FontSize="16" FontAttributes="Bold" x:Name="LeaderboardAdmin"/>
